--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,8 +21,6 @@
         }
         
         table {
-            /* margin-top: 10em;
-            margin-right: 50px; */
             text-align: center;
         }
     </style>
@@ -101,8 +99,7 @@
         <% } %>
 
             <div>
-                <a class=" btn btn-primary " href=" /update ">Update</a>
-            </div>
+                <a href="/home" class="btn btn-primary">Back</a> </div>
 </body>
 
 </html>
