--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -1,82 +1,106 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  font-family: "Open Sans";
-  font-size: 14px;
+    font-family: "Open Sans";
+    font-size: 14px;
 }
 
 .container {
-  width: 500px;
-  margin: 25px auto;
- 
+    width: 500px;
+    margin: 25px auto;
 }
-a{
-  color:chartreuse;
+
+a {
+    color: chartreuse;
 }
 
 form {
-  padding: 20px;
-  background: #2c3e50;
-  color: #fff;
-  border-radius: 4px;
-  margin-top: 100px;
+    padding: 20px;
+    background: #2c3e50;
+    color: #fff;
+    border-radius: 4px;
+    margin-top: 100px;
 }
+
 form label,
 form input,
 form button,
 form select {
-  border: 0;
-  margin-bottom: 3px;
-  display: block;
-  width: 100%;
+    border: 0;
+    margin-bottom: 3px;
+    display: block;
+    width: 100%;
 }
-form input,form select {
-  height: 25px;
-  line-height: 25px;
-  background: #fff;
-  color: #000;
-  padding: 0 6px;
-  box-sizing: border-box;
+
+form input,
+form select {
+    height: 25px;
+    line-height: 25px;
+    background: #fff;
+    color: #000;
+    padding: 0 6px;
+    box-sizing: border-box;
 }
-body, html {
+
+a.btn {
+    border-radius: .25rem;
+    border: 1px solid transparent;
+    padding: .5rem 1rem;
+    color: #fff;
+    text-align: center;
+    margin-left: 32em;
+    background-color: white;
+    color: black;
+    border: 2px solid green;
+    text-decoration: none;
+}
+
+a.btn:hover {
+    border-radius: .25rem;
+}
+
+body,
+html {
     height: 100%;
     margin: 0;
-  }
-  
-  body {
-    
+}
+
+body {
     background-image: url("images/signup-bg.jpg");
-    height: 100%; 
+    height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  }
-.title{
+}
+
+.title {
     text-align: center;
     margin-bottom: -30px;
 }
 
 form button {
-  height: 30px;
-  line-height: 30px;
-  background: #e67e22;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: bold;
-  margin-top: 1.5rem;
-  cursor: pointer;
+    height: 30px;
+    line-height: 30px;
+    background: #e67e22;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-top: 1.5rem;
+    cursor: pointer;
 }
+
 form .error {
-  color: #ff0000;
+    color: #ff0000;
 }
 
 .article-reference {
-  margin-top: 15px;
+    margin-top: 15px;
 }
+
 .article-reference a {
-  color: #e67e22;
+    color: #e67e22;
 }
